tests/ui/masterror/fail/duplicate_telemetry.stderr
error: duplicate telemetry(...) block
 --> tests/ui/masterror/fail/duplicate_telemetry.rs:9:5
  |
9 |     telemetry()
  |     ^^^^^^^^^

warning: unused imports: `AppCode` and `AppErrorKind`
 --> tests/ui/masterror/fail/duplicate_telemetry.rs:1:17
  |
1 | use masterror::{AppCode, AppErrorKind, Masterror};
  |                 ^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
